                     CHANGES version 5.28.0

           This file summarizes changes made since 5.0

Version 5.28.0

Fixed: Issue #916: If monit runs as non-root on linux, the promatch fails to find processes that belong to
other users (monit 5.27.0 regression). Thanks to Lutz Mader for fix.


Version 5.27.0

Important: (Backward compatibility impact) The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only.
If you need to enable TLSv1.0 or TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it
via the SSL option, example:
     set ssl {
        version: tlsv11
     }

New: Added support for MySQL TLS encryption. Example:
        if failed port 3306 protocol mysqls then alert

New: Issue #839: Added support for MySQL 8.x caching_sha2_password authentication. When unsecured (non-TLS) connection
is used, it is possible to also verify the server's RSA key checksum to protect against man-in-the-middle attacks. Example:
    check host mymachine with address 127.0.0.1
        if failed
            port 3306
            protocol mysql
            username monit
            password mypassword123
            rsakey checksum 29e512c06275a1b3f4617f8cb9ca583d642386fe
        then alert

New: The username in the mysql protocol test was limited to 16 bytes, this, this limit was dropped.

New: Linux: Add support for monitoring of filedescriptors usage of a process. Thanks to Marcel Baur and Lutz Mader. Example:
    check process myproc with pidfile /var/run/myproc.pid
        if filedescriptors >= 90% then alert
        if filedescriptors >= 99% then restart
        if total filedescriptors > 5000 then alert

New: Linux, OpenBSD, FreeBSD, DragonflyBSD, MacOS: Add support for monitoring of system-wide filedescriptors usage. Example:
    check system $HOST
        if filedescriptors >= 90% then alert

New: Allow to set a list of allowed TLS protocols (originally only one was allowed). Also add support for